# GeometricTools

./: CMakeLists.txt
GTEngine/: makefile.gte
GTEngine/Include/: GteIEEEBinary16.h  GteIntrEllipsoid3Ellipsoid3.h
GTEngine/Source/: CMakeLists.txt
